# paper-tide

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md
apps/api/: pom.xml
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
database/oracle/: 001_init.sql  002_seed_roles.sql  003_indexes.sql  004_procedures.sql  (+6 more)
docs/: ARCHITECTURE.md  CODE_STRUCTURE.md  DESIGN_STRUCTURE.md  PROJECT_GUIDE.md  TESTING.md  TEST_RESULTS_2026-04-13.md  WORKFLOW.md
scripts/: demo-seed.sh  dev-up.sh  oracle-demo-seed.sh  oracle-schema-apply.sh  oracle-up.sh  rabbitmq-up.sh  test-all.sh
services/agent/: pyproject.toml
services/agent/app/: __init__.py  main.py  models.py  pdf_tools.py  redaction.py  task_store.py
services/agent/app/agent_platform/: __init__.py  config.py  consumer.py  domain.py  handler_registry.py  messages.py  outbox.py  provider_executor.py  publisher.py  repositories.py  runtime.py  snapshots.py  state_machine.py
services/agent/app/agent_platform/handlers/: __init__.py  base.py  conflict_analysis.py  reviewer_assist.py  screening.py
services/agent/app/routes/: __init__.py  tasks.py
services/agent/app/workflows/: __init__.py  conflict_analysis.py  coordinator.py  llm.py  paper_understanding.py  review_assist.py  router.py  schemas.py
services/agent/tests/: test_conflict_analysis_flow.py  test_execution_job.py  test_execution_runtime.py  test_message_consumer.py  test_multipart_tasks_api.py  test_reviewer_assist_flow.py  test_screening_flow.py  test_tasks_api.py  test_workflow_schemas.py
(+136 files in other folders)
